adjusted card y animation, no longer overlaps with holder

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ img {
   height: 410px;
   border-radius: 10px;
   margin: auto;
-  margin-top: 90px;
+  margin-top: 60px;
   margin-bottom: 100px;
   padding: 1px;
   position: relative;
